[package]
name = "crawlins"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest ={version= "0.11.11",features=["rustls-tls","stream"],default-features=false}
scraper = "0.13.0"
selectors = "0.23.0"
serde = {version="1.0.144", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.17"
futures-util = "0.3.17"
indicatif = "0.17.0"
thiserror = "1.0.30"
tokio = { version = "1.20.1", features = ["full"] }
genanki-rs = "0.3.0"